added output format parameter to FFMpeg consumer

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -19,7 +19,7 @@
   </thumbnails>
   <channels>
     <channel>
-        <video-mode>1080i5000</video-mode>
+        <video-mode>PAL</video-mode>
         <channel-layout>stereo</channel-layout>
         <consumers>
           <!--<decklink>
@@ -29,33 +29,36 @@
             <latency>normal</latency>
             <buffer-depth>5</buffer-depth>
           </decklink>-->
-          <!--<stream>
+          <stream>
             <path>udp://225.0.0.1:5554?pkt_size=1316&ttl=64</path>
-            <acodec>mp2</acodec>
-            <vcodec>h264_nvenc</vcodec>
+            <acodec>aac</acodec>
+            <vcodec>nvenc_h264</vcodec>
             <narrow>false</narrow>
-            <options>g=50,flags=+ilme+ildct,refs=1,bf=0,arate=192k,muxrate=5450k,rc=cbr,pcr_period=30,mpegts_pmt_start_pid=0x64,mpegts_start_pid=0x12c,mpegts_service_type=digital_tv</options>
+            <options>g=50,flags=+ilme+ildct,refs=1,bf=0,arate=192k,muxrate=5550k,rc=cbr,pcr_period=30,mpegts_pmt_start_pid=0x64,mpegts_start_pid=0x12c,mpegts_service_type=digital_tv</options>
             <output-metadata>service_provider="IPTV",service_name="TV 1"</output-metadata>
             <vrate>5000</vrate>
             <arate>192</arate>
             <audio_stream_id>300</audio_stream_id>
             <video_stream_id>200</video_stream_id>
             <pixel-format>yuv420p</pixel-format>
-          </stream>-->
+            <format>1080i5000</format>
+          </stream>
           <!--<ndi>
-            <name>PRV</name>
+            <name>TV</name>
+            <alpha>true</alpha>
           </ndi>-->
+
         </consumers>
     </channel>
 
   </channels>
-  <recorders>
+  <!--<recorders>
     <decklink>
       <device>1</device>
       <preroll>1</preroll>
       <offset>2</offset>
     </decklink>
-  </recorders>
+  </recorders>-->
   <controllers>
     <tcp>
         <port>5250</port>
@@ -150,7 +153,8 @@
               <options>coder=vlc</options>      - FFmpeg codecs and format specific options, name=value, comma as delimiter
               <vrate>1024</vrate>               - video bitrate in kilobytes/s
               <arate>128</arate>                - audio bitrate in kilobytes/s
-			  <pixel-format>yuv420p [...]</pixel-format> -pixel formats according to FFMpeg documentation
+              <format>PAL</format>              - sets output resolution, one of video formats for channel's video-modes, defaults to channel mode
+			        <pixel-format>yuv420p [...]</pixel-format> -pixel formats according to FFMpeg documentation
               <audio_stream_id>1 [0..]</audio_stream_id>
               <video_stream_id>0 [0..]</video_stream_id>
               <output-metadata>service_provider="Provider name",service_name="Service name"</output-metadata>
