WIP on deinterlacing video in consumer/ffmpeg_consumer.cpp

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -19,16 +19,16 @@
   </thumbnails>
   <channels>
     <channel>
-        <video-mode>PAL</video-mode>
+        <video-mode>1080i5000</video-mode>
         <channel-layout>stereo</channel-layout>
         <consumers>
-          <!--<decklink>
+          <decklink>
             <device>1</device>
             <embedded-audio>true</embedded-audio>
             <keyer>default</keyer>
             <latency>normal</latency>
             <buffer-depth>5</buffer-depth>
-          </decklink>-->
+          </decklink>
           <stream>
             <path>udp://225.0.0.1:5554?pkt_size=1316&ttl=64</path>
             <acodec>aac</acodec>
@@ -52,13 +52,13 @@
     </channel>
 
   </channels>
-  <!--<recorders>
+  <recorders>
     <decklink>
       <device>1</device>
       <preroll>1</preroll>
       <offset>2</offset>
     </decklink>
-  </recorders>-->
+  </recorders>
   <controllers>
     <tcp>
         <port>5250</port>
