open ndi_producer from config file

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -30,18 +30,17 @@
             <buffer-depth>5</buffer-depth>
           </decklink>
           <stream>
-            <path>udp://225.0.0.1:5554?pkt_size=1316&ttl=64</path>
+            <path>udp://224.1.7.3:5400?pkt_size=1316&ttl=64&bitrate=25000000</path>
             <acodec>aac</acodec>
-            <vcodec>nvenc_h264</vcodec>
+            <vcodec>h264_nvenc</vcodec>
             <narrow>false</narrow>
-            <options>g=50,flags=+ilme+ildct,refs=1,bf=0,arate=192k,muxrate=5550k,rc=cbr,pcr_period=30,mpegts_pmt_start_pid=0x64,mpegts_start_pid=0x12c,mpegts_service_type=digital_tv</options>
+            <options>preset=slow,g=50,flags=+ilme+ildct,refs=1,bf=0,muxrate=16000k,pcr_period=30,mpegts_pmt_start_pid=0x64,mpegts_start_pid=0x12c,mpegts_service_type=digital_tv</options>
             <output-metadata>service_provider="IPTV",service_name="TV 1"</output-metadata>
-            <vrate>5000</vrate>
+            <vrate>15000</vrate>
             <arate>192</arate>
             <audio_stream_id>300</audio_stream_id>
             <video_stream_id>200</video_stream_id>
             <pixel-format>yuv420p</pixel-format>
-            <format>1080i5000</format>
           </stream>
           <!--<ndi>
             <name>TV</name>
@@ -49,6 +48,12 @@
           </ndi>-->
 
         </consumers>
+        <input>
+           <layer>1</layer>
+           <ndi>
+              <name>name_of_ndi_source</name> 
+           </ndi>
+      </input>
     </channel>
 
   </channels>
@@ -174,6 +179,11 @@
               <device>2</device>
               <timecode-source>serial [serial|sdi|vitc]</timecode-source>
            </decklink>
+           <ndi>
+              <name>name_of_ndi_source</name> 
+              <name>address</name> 
+              <buffer-depth>[2..]</buffer-depth>
+           </ndi>
       </input>
     </channel>
 </channels>
