--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -30,30 +30,19 @@
             <buffer-depth>5</buffer-depth>
           </decklink>
           <stream>
-            <path>udp://224.1.7.3:5400?pkt_size=1316&ttl=64&bitrate=25000000</path>
+            <path>udp://224.1.7.3:5400?pkt_size=1316&ttl=64&bitrate=5000000</path>
             <acodec>aac</acodec>
-            <vcodec>h264_nvenc</vcodec>
+            <vcodec>libx264</vcodec>
             <narrow>false</narrow>
-            <options>preset=slow,g=50,flags=+ilme+ildct,refs=1,bf=0,muxrate=16000k,pcr_period=30,mpegts_pmt_start_pid=0x64,mpegts_start_pid=0x12c,mpegts_service_type=digital_tv</options>
+            <options>preset=ultrafast,pix_fmt=yuv420p,g=50,flags=+ilme+ildct,refs=1,bf=0,pcr_period=30,mpegts_pmt_start_pid=0x64,mpegts_start_pid=0x12c,mpegts_service_type=digital_tv</options>
             <output-metadata>service_provider="IPTV",service_name="TV 1"</output-metadata>
-            <vrate>15000</vrate>
+            <vrate>4500</vrate>
             <arate>192</arate>
+            <filter>scale=720x576</filter>
             <audio_stream_id>300</audio_stream_id>
             <video_stream_id>200</video_stream_id>
-            <pixel-format>yuv420p</pixel-format>
           </stream>
-          <!--<ndi>
-            <name>TV</name>
-            <alpha>true</alpha>
-          </ndi>-->
-
         </consumers>
-        <input>
-           <layer>1</layer>
-           <ndi>
-              <name>name_of_ndi_source</name> 
-           </ndi>
-      </input>
     </channel>
 
   </channels>
@@ -151,15 +140,14 @@
                 <borderless>false [true|false]</borderless>
             </screen>
             <stream>
-              <path>udp://127.0.0.1:5554</path> - only udp was tested
+              <path>udp://127.0.0.1:5554</path> - only udp and rtmp was tested
               <acodec>aac</acodec>              - FFmpeg codec 
               <vcodec>libx264</vcodec>          - ...
-              <narrow>false</narrow>            - aspect ratio in SD mode
-              <options>coder=vlc</options>      - FFmpeg codecs and format specific options, name=value, comma as delimiter
+              <narrow>false[false, true]</narrow> - aspect ratio (in SD modes only)
+              <options>pix_fmt=yuv420p,preset=veryfast,coder=vlc</options>      - FFmpeg codecs and format specific options, name=value, comma as delimiter
               <vrate>1024</vrate>               - video bitrate in kilobytes/s
               <arate>128</arate>                - audio bitrate in kilobytes/s
-              <format>PAL</format>              - sets output resolution, one of video formats for channel's video-modes, defaults to channel mode
-			        <pixel-format>yuv420p [...]</pixel-format> -pixel formats according to FFMpeg documentation
+			        <filter> a FFMpeg video filter string </filter> -video filter described in FFMpeg documentation, e.g scale=1024x768
               <audio_stream_id>1 [0..]</audio_stream_id>
               <video_stream_id>0 [0..]</video_stream_id>
               <output-metadata>service_provider="Provider name",service_name="Service name"</output-metadata>
