--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -30,16 +30,28 @@
             <buffer-depth>5</buffer-depth>
           </decklink>
           <stream>
-            <path>udp://224.1.7.3:5400?pkt_size=1316&ttl=64&bitrate=5000000</path>
+            <path>udp://224.1.7.3:5401?pkt_size=1316&ttl=64</path>
             <acodec>aac</acodec>
             <vcodec>libx264</vcodec>
             <narrow>false</narrow>
-            <options>preset=ultrafast,pix_fmt=yuv420p,g=50,flags=+ilme+ildct,refs=1,bf=0,pcr_period=30,mpegts_pmt_start_pid=0x64,mpegts_start_pid=0x12c,mpegts_service_type=digital_tv</options>
+            <options>g=50,refs=1,bf=0,pcr_period=30,mpegts_pmt_start_pid=0x64,mpegts_start_pid=0x12c,mpegts_service_type=digital_tv</options>
             <output-metadata>service_provider="IPTV",service_name="TV 1"</output-metadata>
-            <vrate>4500</vrate>
+            <vrate>5000</vrate>
             <arate>192</arate>
-            <filter>scale=720x576</filter>
-            <audio_stream_id>300</audio_stream_id>
+            <audio_stream_id>101</audio_stream_id>
+            <video_stream_id>200</video_stream_id>
+          </stream>
+          <stream>
+            <path>udp://224.1.7.3:5400?pkt_size=1316&ttl=64</path>
+            <acodec>aac</acodec>
+            <vcodec>nvenc_h264</vcodec>
+            <narrow>false</narrow>
+            <options>preset=fast,g=50,refs=1,bf=0,pcr_period=30,mpegts_pmt_start_pid=0x64,mpegts_start_pid=0x12c,mpegts_service_type=digital_tv</options>
+            <output-metadata>service_provider="IPTV",service_name="TV 1"</output-metadata>
+            <vrate>5000</vrate>
+            <arate>192</arate>
+            <filter>scale=720x576,yadif,fps=25</filter>
+            <audio_stream_id>101</audio_stream_id>
             <video_stream_id>200</video_stream_id>
           </stream>
         </consumers>
