--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -19,17 +19,17 @@
   </thumbnails>
   <channels>
     <channel>
-        <video-mode>1080i5000</video-mode>
-        <channel-layout>stereo</channel-layout>
+        <video-mode>PAL</video-mode>
+        <channel-layout>passthru</channel-layout>
         <consumers>
           <decklink>
-            <device>1</device>
+            <device>2</device>
             <embedded-audio>true</embedded-audio>
             <keyer>default</keyer>
             <latency>normal</latency>
-            <buffer-depth>5</buffer-depth>
+            <buffer-depth>4</buffer-depth>
           </decklink>
-          <stream>
+          <!--<stream>
             <path>udp://224.1.7.3:5401?pkt_size=1316&ttl=64</path>
             <acodec>aac</acodec>
             <vcodec>libx264</vcodec>
@@ -41,7 +41,8 @@
             <audio_stream_id>101</audio_stream_id>
             <video_stream_id>200</video_stream_id>
           </stream>
-          <stream>
+          -->
+          <!--<stream>
             <path>udp://224.1.7.3:5400?pkt_size=1316&ttl=64</path>
             <acodec>aac</acodec>
             <vcodec>nvenc_h264</vcodec>
@@ -53,14 +54,23 @@
             <filter>scale=720x576,yadif,fps=25</filter>
             <audio_stream_id>101</audio_stream_id>
             <video_stream_id>200</video_stream_id>
-          </stream>
+            <channel_map>0, 1</channel_map>
+          </stream>-->
+          <!--<ndi>
+            <name>TEST</name>
+          </ndi>-->
         </consumers>
+      <!--<input>
+        <decklink>
+          <device>1</device>
+        </decklink>
+      </input>-->
     </channel>
 
   </channels>
   <recorders>
     <decklink>
-      <device>1</device>
+      <device>2</device>
       <preroll>1</preroll>
       <offset>2</offset>
     </decklink>
@@ -116,7 +126,6 @@
             <decklink>
                 <device>[1..]</device>
                 <embedded-audio>false [true|false]</embedded-audio>
-                <channel-layout>stereo [mono|stereo|dts|dolbye|dolbydigital|smpte|passthru]</channel-layout>
                 <latency>normal [normal|low|default]</latency>
                 <keyer>external [external|internal|default]</keyer>
                 <key-only>false [true|false]</key-only>
@@ -125,7 +134,6 @@
             <blocking-decklink>
                 <device>[1..]</device>
                 <embedded-audio>false [true|false]</embedded-audio>
-                <channel-layout>stereo [mono|stereo|dts|dolbye|dolbydigital|smpte|passthru]</channel-layout>
                 <keyer>external [external|internal|default]</keyer>
                 <key-only>false [true|false]</key-only>
             </blocking-decklink>
@@ -165,6 +173,7 @@
               <output-metadata>service_provider="Provider name",service_name="Service name"</output-metadata>
               <audio-metadata>language=en</audio-metadata>
               <video-metadata></video-metadata>
+              <channel_map>0, 1</channel_map>  - channel indexes in result stream
             </stream>
             <ndi>
               <name>name_of_ndi_source</name>   - name of source, required
