added use-software-scaler option to channel

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -19,52 +19,21 @@
   </thumbnails>
   <channels>
     <channel>
-        <video-mode>PAL</video-mode>
-        <channel-layout>passthru</channel-layout>
-        <consumers>
+      <video-mode>1080i5000</video-mode>
+      <channel-layout>stereo</channel-layout>
+      <use-software-scaler>true</use-software-scaler>
+      <consumers>
           <decklink>
-            <device>2</device>
+            <device>3</device>
             <embedded-audio>true</embedded-audio>
             <keyer>default</keyer>
             <latency>normal</latency>
             <buffer-depth>4</buffer-depth>
           </decklink>
-          <!--<stream>
-            <path>udp://224.1.7.3:5401?pkt_size=1316&ttl=64</path>
-            <acodec>aac</acodec>
-            <vcodec>libx264</vcodec>
-            <narrow>false</narrow>
-            <options>g=50,refs=1,bf=0,pcr_period=30,mpegts_pmt_start_pid=0x64,mpegts_start_pid=0x12c,mpegts_service_type=digital_tv</options>
-            <output-metadata>service_provider="IPTV",service_name="TV 1"</output-metadata>
-            <vrate>5000</vrate>
-            <arate>192</arate>
-            <audio_stream_id>101</audio_stream_id>
-            <video_stream_id>200</video_stream_id>
-          </stream>
-          -->
-          <!--<stream>
-            <path>udp://224.1.7.3:5400?pkt_size=1316&ttl=64</path>
-            <acodec>aac</acodec>
-            <vcodec>nvenc_h264</vcodec>
-            <narrow>false</narrow>
-            <options>preset=fast,g=50,refs=1,bf=0,pcr_period=30,mpegts_pmt_start_pid=0x64,mpegts_start_pid=0x12c,mpegts_service_type=digital_tv</options>
-            <output-metadata>service_provider="IPTV",service_name="TV 1"</output-metadata>
-            <vrate>5000</vrate>
-            <arate>192</arate>
-            <filter>scale=720x576,yadif,fps=25</filter>
-            <audio_stream_id>101</audio_stream_id>
-            <video_stream_id>200</video_stream_id>
-            <channel_map>0, 1</channel_map>
-          </stream>-->
-          <!--<ndi>
+          <ndi>
             <name>TEST</name>
-          </ndi>-->
-        </consumers>
-      <!--<input>
-        <decklink>
-          <device>1</device>
-        </decklink>
-      </input>-->
+          </ndi>
+      </consumers>
     </channel>
 
   </channels>
@@ -122,6 +91,7 @@
         <video-mode> PAL [PAL|NTSC|576p2500|720p2398|720p2400|720p2500|720p5000|720p2997|720p5994|720p3000|720p6000|1080p2398|1080p2400|1080i5000|1080i5994|1080i6000|1080p2500|1080p2997|1080p3000|1080p5000|1080p5994|1080p6000|1556p2398|1556p2400|1556p2500|2160p2398|2160p2400|2160p2500|2160p2997|2160p3000|2160p5000] </video-mode>
         <channel-layout>stereo [mono|stereo|dts|dolbye|dolbydigital|smpte|passthru]</channel-layout>
         <straight-alpha-output>false [true|false]</straight-alpha-output>
+        <use-software-scaler>false [true|false]</use-software-scaler>
         <consumers>
             <decklink>
                 <device>[1..]</device>
