--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -19,9 +19,8 @@
   </thumbnails>
   <channels>
     <channel>
-      <video-mode>1080i5000</video-mode>
+      <video-mode>PAL</video-mode>
       <channel-layout>stereo</channel-layout>
-      <use-software-scaler>true</use-software-scaler>
       <consumers>
           <decklink>
             <device>3</device>
@@ -32,6 +31,7 @@
           </decklink>
           <ndi>
             <name>TEST</name>
+            <blocking>true</blocking>
           </ndi>
       </consumers>
     </channel>
@@ -91,7 +91,6 @@
         <video-mode> PAL [PAL|NTSC|576p2500|720p2398|720p2400|720p2500|720p5000|720p2997|720p5994|720p3000|720p6000|1080p2398|1080p2400|1080i5000|1080i5994|1080i6000|1080p2500|1080p2997|1080p3000|1080p5000|1080p5994|1080p6000|1556p2398|1556p2400|1556p2500|2160p2398|2160p2400|2160p2500|2160p2997|2160p3000|2160p5000] </video-mode>
         <channel-layout>stereo [mono|stereo|dts|dolbye|dolbydigital|smpte|passthru]</channel-layout>
         <straight-alpha-output>false [true|false]</straight-alpha-output>
-        <use-software-scaler>false [true|false]</use-software-scaler>
         <consumers>
             <decklink>
                 <device>[1..]</device>
