seeking video with framerates different than channel in channel timebase

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -23,16 +23,16 @@
       <channel-layout>stereo</channel-layout>
       <consumers>
           <decklink>
-            <device>3</device>
+            <device>1</device>
             <embedded-audio>true</embedded-audio>
             <keyer>default</keyer>
             <latency>normal</latency>
             <buffer-depth>4</buffer-depth>
           </decklink>
-          <ndi>
+          <!--<ndi>
             <name>TEST</name>
             <blocking>true</blocking>
-          </ndi>
+          </ndi>-->
       </consumers>
     </channel>
 
