fixed playing more than 2 channels on decklink_consumer

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -20,19 +20,20 @@
   <channels>
     <channel>
       <video-mode>PAL</video-mode>
-      <channel-layout>stereo</channel-layout>
+      <channel-layout>passthru</channel-layout>
       <consumers>
           <decklink>
             <device>1</device>
             <embedded-audio>true</embedded-audio>
+            <channel-layout>passthru</channel-layout>
             <keyer>default</keyer>
             <latency>normal</latency>
             <buffer-depth>4</buffer-depth>
           </decklink>
-          <!--<ndi>
+          <ndi>
             <name>TEST</name>
             <blocking>true</blocking>
-          </ndi>-->
+          </ndi>
       </consumers>
     </channel>
 
@@ -95,6 +96,7 @@
             <decklink>
                 <device>[1..]</device>
                 <embedded-audio>false [true|false]</embedded-audio>
+                <channel-layout>stereo [mono|stereo|dts|dolbye|dolbydigital|smpte|passthru]</channel-layout>
                 <latency>normal [normal|low|default]</latency>
                 <keyer>external [external|internal|default]</keyer>
                 <key-only>false [true|false]</key-only>
@@ -103,6 +105,7 @@
             <blocking-decklink>
                 <device>[1..]</device>
                 <embedded-audio>false [true|false]</embedded-audio>
+                <channel-layout>stereo [mono|stereo|dts|dolbye|dolbydigital|smpte|passthru]</channel-layout>
                 <keyer>external [external|internal|default]</keyer>
                 <key-only>false [true|false]</key-only>
             </blocking-decklink>
