changed project type, needed classes added, icon is now visible

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -19,24 +19,22 @@
   </thumbnails>
   <channels>
     <channel>
-      <video-mode>PAL</video-mode>
+      <video-mode>1080i5000</video-mode>
       <channel-layout>passthru</channel-layout>
       <consumers>
-          <decklink>
+          <!--<decklink>
             <device>1</device>
             <embedded-audio>true</embedded-audio>
             <channel-layout>passthru</channel-layout>
             <keyer>default</keyer>
             <latency>normal</latency>
             <buffer-depth>4</buffer-depth>
-          </decklink>
+          </decklink>-->
           <ndi>
             <name>TEST</name>
-            <blocking>true</blocking>
           </ndi>
       </consumers>
     </channel>
-
   </channels>
   <recorders>
     <decklink>
