initial stream input support

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -22,14 +22,14 @@
       <video-mode>1080i5000</video-mode>
       <channel-layout>passthru</channel-layout>
       <consumers>
-          <!--<decklink>
+          <decklink>
             <device>1</device>
             <embedded-audio>true</embedded-audio>
             <channel-layout>passthru</channel-layout>
             <keyer>default</keyer>
             <latency>normal</latency>
             <buffer-depth>4</buffer-depth>
-          </decklink>-->
+          </decklink>
           <ndi>
             <name>TEST</name>
           </ndi>
