--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -30,9 +30,10 @@
             <latency>normal</latency>
             <buffer-depth>4</buffer-depth>
           </decklink>
-          <!--<ndi>
+          <ndi>
             <name>TEST</name>
-          </ndi>-->
+          </ndi>
+        <screen/>
       </consumers>
     </channel>
   </channels>
