added channel number to thread names

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -19,9 +19,8 @@
   </thumbnails>
   <channels>
     <channel>
-      <video-mode>1080i5000</video-mode>
-      <channel-layout>passthru</channel-layout>
-      <consumers>
+      <video-mode>PAL</video-mode>
+      <!--<consumers>
           <decklink>
             <device>1</device>
             <embedded-audio>true</embedded-audio>
@@ -33,16 +32,15 @@
           <ndi>
             <name>TEST</name>
           </ndi>
-      </consumers>
+      </consumers>-->
+    </channel>
+    <channel>
+      <video-mode>PAL</video-mode>
+    </channel>
+    <channel>
+      <video-mode>PAL</video-mode>
     </channel>
   </channels>
-  <recorders>
-    <decklink>
-      <device>1</device>
-      <preroll>1</preroll>
-      <offset>2</offset>
-    </decklink>
-  </recorders>
   <controllers>
     <tcp>
         <port>5250</port>
@@ -157,6 +155,7 @@
            <decklink>
               <device>2</device>
               <timecode-source>serial [serial|sdi|vitc]</timecode-source>
+              <format-auto-detection>true [false|true]</format-auto-detection>
            </decklink>
            <ndi>
               <name>name_of_ndi_source</name> 
