--- a/common/common.vcxproj
+++ b/common/common.vcxproj
@@ -161,8 +161,8 @@
     <IntDir>$(ProjectDir)tmp\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Develop|Win32'">
-    <IncludePath>..\dependencies\BluefishSDK_V5_10_0_42\Inc\;..\dependencies\boost\;..\dependencies\ffmpeg 0.6\include\;..\dependencies\FreeImage\Dist\;..\dependencies\glew-2.1.0\include;..\dependencies\SFML-2.3.2\include\;..\dependencies\tbb\include\;$(IncludePath)</IncludePath>
-    <LibraryPath>..\dependencies\BluefishSDK_V5_10_0_42\Lib\;..\dependencies\boost\stage\lib\;..\dependencies\ffmpeg 0.6\lib\;..\dependencies\FreeImage\Dist\;..\dependencies\glew-2.1.0\lib\Release\Win32;..\dependencies\SFML-2.3.2\lib\;..\dependencies\tbb\lib\;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\dependencies\boost\;..\dependencies\FreeImage\Dist\;..\dependencies\glew-2.1.0\include;..\dependencies\SFML-2.3.2\include\;..\dependencies\tbb\include\;$(IncludePath)</IncludePath>
+    <LibraryPath>..\dependencies\boost\stage\lib\;..\dependencies\FreeImage\Dist\;..\dependencies\glew-2.1.0\lib\Release\Win32;..\dependencies\SFML-2.3.2\lib\;..\dependencies\tbb\lib\;$(LibraryPath)</LibraryPath>
     <OutDir>$(ProjectDir)bin\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)tmp\$(Configuration)\</IntDir>
   </PropertyGroup>
