--- a/protocol/protocol.vcxproj
+++ b/protocol/protocol.vcxproj
@@ -377,7 +377,7 @@
     <IntDir>$(ProjectDir)tmp\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Develop|Win32'">
-    <IncludePath>../;..\dependencies/tbb/include;..\dependencies\boost;..\dependencies\glew-2.1.0\include;..\dependencies\SFML-2.3.2\include;$(IncludePath)</IncludePath>
+    <IncludePath>..\;..\dependencies\tbb\include;..\dependencies\boost;..\dependencies\glew-2.1.0\include;..\dependencies\SFML-2.3.2\include;$(IncludePath)</IncludePath>
     <OutDir>$(ProjectDir)bin\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)tmp\$(Configuration)\</IntDir>
   </PropertyGroup>
