OpenGL device selection

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -17,10 +17,13 @@
     <generate-delay-millis>2000</generate-delay-millis>
     <video-mode>720p2500</video-mode>
   </thumbnails>
+  <opengl>
+    <gpu-index>0</gpu-index>
+  </opengl>
   <channels>
     <channel>
-      <video-mode>PAL</video-mode>
-      <!--<consumers>
+      <video-mode>1080i5000</video-mode>
+      <consumers>
           <decklink>
             <device>1</device>
             <embedded-audio>true</embedded-audio>
@@ -30,15 +33,15 @@
             <buffer-depth>4</buffer-depth>
           </decklink>
           <ndi>
-            <name>TEST</name>
+            <name>test</name>
           </ndi>
-      </consumers>-->
+      </consumers>
     </channel>
     <channel>
-      <video-mode>PAL</video-mode>
+      <video-mode>1080i5000</video-mode>
     </channel>
     <channel>
-      <video-mode>PAL</video-mode>
+      <video-mode>1080i5000</video-mode>
     </channel>
   </channels>
   <controllers>
@@ -74,6 +77,10 @@
 <flash>
     <buffer-depth>auto [auto|1..]</buffer-depth>
 </flash>
+<opengl>
+  <gpu-index>-1[-1..cards_count]</gpu-index>
+</opengl>
+
 <thumbnails>
     <generate-thumbnails>true [true|false]</generate-thumbnails>
     <width>256</width>
