gpu selection moved to <mixer> section of casparcg.config

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -17,9 +17,9 @@
     <generate-delay-millis>2000</generate-delay-millis>
     <video-mode>720p2500</video-mode>
   </thumbnails>
-  <opengl>
+  <mixer>
     <gpu-index>0</gpu-index>
-  </opengl>
+  </mixer>
   <channels>
     <channel>
       <video-mode>1080i5000</video-mode>
@@ -62,6 +62,7 @@
     <blend-modes>   false [true|false]</blend-modes>
     <straight-alpha>false [true|false]</straight-alpha>
     <chroma-key>    false [true|false]</chroma-key>
+    <gpu-index>-1[-1..cards_count]</gpu-index>
 </mixer>
 <auto-deinterlace>true  [true|false]</auto-deinterlace>
 <auto-transcode>  true  [true|false]</auto-transcode>
@@ -77,9 +78,6 @@
 <flash>
     <buffer-depth>auto [auto|1..]</buffer-depth>
 </flash>
-<opengl>
-  <gpu-index>-1[-1..cards_count]</gpu-index>
-</opengl>
 
 <thumbnails>
     <generate-thumbnails>true [true|false]</generate-thumbnails>
