added dual-stereo channel_layout

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -23,11 +23,12 @@
   <channels>
     <channel>
       <video-mode>1080i5000</video-mode>
+      <channel-layout>dual-stereo</channel-layout>
       <consumers>
           <decklink>
             <device>1</device>
             <embedded-audio>true</embedded-audio>
-            <channel-layout>passthru</channel-layout>
+            <channel-layout>dual-stereo</channel-layout>
             <keyer>default</keyer>
             <latency>normal</latency>
             <buffer-depth>4</buffer-depth>
@@ -91,7 +92,7 @@
 <channels>
     <channel>
         <video-mode> PAL [PAL|NTSC|576p2500|720p2398|720p2400|720p2500|720p5000|720p2997|720p5994|720p3000|720p6000|1080p2398|1080p2400|1080i5000|1080i5994|1080i6000|1080p2500|1080p2997|1080p3000|1080p5000|1080p5994|1080p6000|1556p2398|1556p2400|1556p2500|2160p2398|2160p2400|2160p2500|2160p2997|2160p3000|2160p5000] </video-mode>
-        <channel-layout>stereo [mono|stereo|dts|dolbye|dolbydigital|smpte|passthru]</channel-layout>
+        <channel-layout>stereo [mono|stereo|dual-stereo|dts|dolbye|dolbydigital|smpte|passthru]</channel-layout>
         <straight-alpha-output>false [true|false]</straight-alpha-output>
         <consumers>
             <decklink>
