Removed blocking_decklink_consumer, added decklink consumer notification of reference signal and temperature change fixed debug build added system_watcher class with its own thread for future notification of system parameters (i.e. CPU usage)

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -33,17 +33,24 @@
             <latency>normal</latency>
             <buffer-depth>4</buffer-depth>
           </decklink>
-          <ndi>
+          <!--<ndi>
             <name>test</name>
-          </ndi>
+          </ndi>-->
       </consumers>
     </channel>
-    <channel>
+    <!--<channel>
       <video-mode>1080i5000</video-mode>
+      <input>
+        <layer>0</layer>
+        <decklink>
+          <device>1</device>
+          <timecode-source>sdi</timecode-source>
+        </decklink>
+      </input>
     </channel>
     <channel>
       <video-mode>1080i5000</video-mode>
-    </channel>
+    </channel>-->
   </channels>
   <controllers>
     <tcp>
@@ -104,13 +111,6 @@
                 <key-only>false [true|false]</key-only>
                 <buffer-depth>3 [1..]</buffer-depth>
             </decklink>
-            <blocking-decklink>
-                <device>[1..]</device>
-                <embedded-audio>false [true|false]</embedded-audio>
-                <channel-layout>stereo [mono|stereo|dts|dolbye|dolbydigital|smpte|passthru]</channel-layout>
-                <keyer>external [external|internal|default]</keyer>
-                <key-only>false [true|false]</key-only>
-            </blocking-decklink>
             <bluefish>
                 <device>[1..]</device>
                 <embedded-audio>false [true|false]</embedded-audio>
