--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -181,6 +181,9 @@
     <ClInclude Include="recorder.h">
       <Filter>source</Filter>
     </ClInclude>
+    <ClInclude Include="system_watcher.h">
+      <Filter>source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="producer\transition\transition_producer.cpp">
@@ -279,6 +282,9 @@
     </ClCompile>
     <ClCompile Include="producer\media_info\in_memory_media_info_repository.cpp">
       <Filter>source\producer\media_info</Filter>
+    </ClCompile>
+    <ClCompile Include="system_watcher.cpp">
+      <Filter>source</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
