added configurable window title prefix

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <log-level>trace</log-level>
+  <window-title>Program output</window-title>
   <paths>
     <media-path>media\</media-path>
     <log-path>log\</log-path>
@@ -8,39 +9,22 @@
     <template-path>templates\</template-path>
   </paths>
   <mixer>
-    <gpu-index>0</gpu-index>
+    <gpu-index>-1</gpu-index>
   </mixer>
   <channels>
     <channel>
       <video-mode>1080i5000</video-mode>
-      <channel-layout>dual-stereo</channel-layout>
+      <channel-layout>stereo</channel-layout>
       <consumers>
           <decklink>
-            <device>2</device>
+            <device>1</device>
             <embedded-audio>true</embedded-audio>
-            <channel-layout>dual-stereo</channel-layout>
             <keyer>default</keyer>
             <latency>normal</latency>
             <buffer-depth>4</buffer-depth>
           </decklink>
-          <!--<ndi>
-            <name>test</name>
-          </ndi>-->
       </consumers>
     </channel>
-    <!--<channel>
-      <video-mode>1080i5000</video-mode>
-      <input>
-        <layer>0</layer>
-        <decklink>
-          <device>1</device>
-          <timecode-source>sdi</timecode-source>
-        </decklink>
-      </input>
-    </channel>
-    <channel>
-      <video-mode>1080i5000</video-mode>
-    </channel>-->
   </channels>
   <controllers>
     <tcp>
@@ -55,6 +39,7 @@
 
 <!--
 <log-level>       trace [trace|debug|info|warning|error]</log-level>
+<window-title></window-title> - prefix before application name on window title bar
 <channel-grid>    false [true|false]</channel-grid>
 <mixer>
     <blend-modes>   false [true|false]</blend-modes>
@@ -99,10 +84,6 @@
                 <key-only>false [true|false]</key-only>
             </bluefish>
             <system-audio></system-audio>
-            <synchronizing>
-                ... consumer1
-                ... consumer2
-            </synchronizing>
             <screen>
                 <device>[0..]</device>
                 <aspect-ratio>default [default|4:3|16:9]</aspect-ratio>
@@ -122,7 +103,7 @@
               <options>pix_fmt=yuv420p,preset=veryfast,coder=vlc</options>      - FFmpeg codecs and format specific options, name=value, comma as delimiter
               <vrate>1024</vrate>               - video bitrate in kilobytes/s
               <arate>128</arate>                - audio bitrate in kilobytes/s
-			        <filter> a FFMpeg video filter string </filter> -video filter described in FFMpeg documentation, e.g scale=1024x768
+              <filter> a FFMpeg video filter string </filter> -video filter described in FFMpeg documentation, e.g scale=1024x768
               <audio_stream_id>1 [0..]</audio_stream_id>
               <video_stream_id>0 [0..]</video_stream_id>
               <output-metadata>service_provider="Provider name",service_name="Service name"</output-metadata>
