updated casparcg.config about GPU selection

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -42,10 +42,10 @@
 <window-title></window-title> - prefix before application name on window title bar
 <channel-grid>    false [true|false]</channel-grid>
 <mixer>
-    <blend-modes>   false [true|false]</blend-modes>
-    <straight-alpha>false [true|false]</straight-alpha>
-    <chroma-key>    false [true|false]</chroma-key>
-    <gpu-index>-1[-1..cards_count]</gpu-index>
+  <blend-modes>   false [true|false]</blend-modes>
+  <straight-alpha>false [true|false]</straight-alpha>
+  <chroma-key>    false [true|false]</chroma-key>
+  <gpu-index>-1[-1..cards_count]</gpu-index> // index of GPU to use for OpenGL rendering, -1 for GPU used by monitor. Only Nvidia Quadro cards can be selected using this method.
 </mixer>
 <auto-deinterlace>true  [true|false]</auto-deinterlace>
 <auto-transcode>  true  [true|false]</auto-transcode>
