improved seeking performance by disabling multithreaded filter in ffmpeg producer

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -127,7 +127,7 @@
            </decklink>
            <ndi>
               <name>name_of_ndi_source</name> 
-              <name>address</name> 
+              <address>address</address> 
               <buffer-depth>[2..]</buffer-depth>
            </ndi>
       </input>
