--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -1,40 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <log-level>trace</log-level>
-  <window-title>Program output</window-title>
-  <paths>
-    <media-path>media\</media-path>
-    <log-path>log\</log-path>
-    <data-path>data\</data-path>
-    <template-path>templates\</template-path>
-  </paths>
-  <mixer>
-    <gpu-index>-1</gpu-index>
-  </mixer>
-  <channels>
-    <channel>
-      <video-mode>1080i5000</video-mode>
-      <channel-layout>stereo</channel-layout>
-      <consumers>
-          <decklink>
-            <device>1</device>
-            <embedded-audio>true</embedded-audio>
-            <keyer>default</keyer>
-            <latency>normal</latency>
-            <buffer-depth>4</buffer-depth>
-          </decklink>
-      </consumers>
-    </channel>
-  </channels>
-  <controllers>
-    <tcp>
-        <port>5250</port>
-        <protocol>AMCP</protocol>
-    </tcp>
-  </controllers>
-  <osc>
-    <default-port>6250</default-port>
-  </osc>
+	<log-level>trace</log-level>
+	<window-title>Program output</window-title>
+	<paths>
+		<media-path>media\</media-path>
+		<log-path>log\</log-path>
+		<data-path>data\</data-path>
+		<template-path>templates\</template-path>
+	</paths>
+	<mixer>
+		<gpu-index>-1</gpu-index>
+	</mixer>
+	<channels>
+		<channel>
+			<video-mode>1080i5000</video-mode>
+			<channel-layout>stereo</channel-layout>
+			<consumers>
+				<!--<decklink>
+					<device>1</device>
+					<embedded-audio>true</embedded-audio>
+					<keyer>default</keyer>
+					<latency>normal</latency>
+					<buffer-depth>4</buffer-depth>
+				</decklink>-->
+				<stream>
+					<path>udp://127.0.0.1:5554</path>
+					<acodec>aac</acodec>
+					<vcodec>libx264</vcodec>
+					<narrow>false</narrow>
+					<options>pix_fmt=yuv420p,preset=veryfast,coder=vlc</options>
+					<vrate>1024</vrate>
+					<arate>128</arate>
+					<audio_stream_id>1</audio_stream_id>
+					<video_stream_id>0</video_stream_id>
+					<scte35_stream_id>8190</scte35_stream_id>
+					<output-metadata>service_provider="Provider name",service_name="Service name"</output-metadata>
+					<audio-metadata>language=en</audio-metadata>
+					<video-metadata></video-metadata>
+				</stream>
+			</consumers>
+		</channel>
+	</channels>
+	<controllers>
+		<tcp>
+			<port>5250</port>
+			<protocol>AMCP</protocol>
+		</tcp>
+	</controllers>
+	<osc>
+		<default-port>6250</default-port>
+	</osc>
 </configuration>
 
 <!--
@@ -106,6 +121,7 @@
               <filter> a FFMpeg video filter string </filter> -video filter described in FFMpeg documentation, e.g scale=1024x768
               <audio_stream_id>1 [0..]</audio_stream_id>
               <video_stream_id>0 [0..]</video_stream_id>
+              <scte35_stream_id>0</scte35_stream_id> - stream id for SCTE-35 signalling, 0 (default) means no such stream, common stream number is 8190 (0x1FFE)
               <output-metadata>service_provider="Provider name",service_name="Service name"</output-metadata>
               <audio-metadata>language=en</audio-metadata>
               <video-metadata></video-metadata>
