--- a/core/core.vcxproj
+++ b/core/core.vcxproj
@@ -485,6 +485,7 @@
     <Lib />
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="consumer\signaller.h" />
     <ClInclude Include="consumer\write_frame_consumer.h" />
     <ClInclude Include="consumer\synchronizing\synchronizing_consumer.h" />
     <ClInclude Include="mixer\audio\audio_util.h" />
@@ -500,6 +501,7 @@
     <ClInclude Include="producer\media_info\media_info.h" />
     <ClInclude Include="producer\media_info\media_info_repository.h" />
     <ClInclude Include="recorder.h" />
+    <ClInclude Include="consumer\splice_signal.h" />
     <ClInclude Include="system_watcher.h" />
     <ClInclude Include="producer\layer\layer_producer.h" />
     <ClInclude Include="video_channel.h" />
@@ -534,6 +536,10 @@
     <ClInclude Include="StdAfx.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="consumer\signaller.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Develop|Win32'">../StdAfx.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Develop|x64'">../StdAfx.h</PrecompiledHeaderFile>
+    </ClCompile>
     <ClCompile Include="consumer\synchronizing\synchronizing_consumer.cpp">
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Profile|Win32'">../../StdAfx.h</PrecompiledHeaderFile>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Profile|x64'">../../StdAfx.h</PrecompiledHeaderFile>
