Working signal commands splice_insert(), splice_cancel()

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -24,16 +24,16 @@
 					<buffer-depth>4</buffer-depth>
 				</decklink>-->
 				<stream>
-					<path>udp://225.100.11.1:5500</path>
+					<path>udp://127.0.0.1:5500</path>
 					<acodec>aac</acodec>
-					<vcodec>libx264</vcodec>
+					<vcodec>mpeg2video</vcodec>
 					<narrow>false</narrow>
 					<options>pix_fmt=yuv420p,preset=veryfast,coder=vlc</options>
-					<vrate>1024</vrate>
+					<vrate>4096</vrate>
 					<arate>128</arate>
 					<audio_stream_id>1</audio_stream_id>
 					<video_stream_id>0</video_stream_id>
-					<scte35_stream_id>8190</scte35_stream_id>
+					<scte35_stream_id>7010</scte35_stream_id>
 					<output-metadata>service_provider="Provider name",service_name="Service name"</output-metadata>
 					<audio-metadata>language=en</audio-metadata>
 					<video-metadata></video-metadata>
@@ -121,7 +121,7 @@
               <filter> a FFMpeg video filter string </filter> -video filter described in FFMpeg documentation, e.g scale=1024x768
               <audio_stream_id>1 [0..]</audio_stream_id>
               <video_stream_id>0 [0..]</video_stream_id>
-              <scte35_stream_id>0</scte35_stream_id> - stream id for SCTE-35 signalling, 0 (default) means no such stream, common stream number is 8190 (0x1FFE)
+              <scte35_stream_id>0</scte35_stream_id> - stream id for SCTE-35 signalling, 0 (default) means no SCTE-35 stream should be added
               <output-metadata>service_provider="Provider name",service_name="Service name"</output-metadata>
               <audio-metadata>language=en</audio-metadata>
               <video-metadata></video-metadata>
